[gd_scene load_steps=11 format=2]

[ext_resource path="res://Buildings/building_menu_icon.gd" type="Script" id=1]
[ext_resource path="res://Artwork/villager_house.png" type="Texture" id=2]
[ext_resource path="res://Artwork/unit-info_menu.png" type="Texture" id=3]
[ext_resource path="res://Font/Inter-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Artwork/food.png" type="Texture" id=5]
[ext_resource path="res://Artwork/wood.png" type="Texture" id=6]
[ext_resource path="res://Artwork/money.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "house",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35, 31.5 )

[sub_resource type="DynamicFont" id=3]
size = 124
font_data = ExtResource( 4 )

[node name="building_menu_icon" type="Node2D"]
z_index = 12
script = ExtResource( 1 )

[node name="BuildingIcons" type="AnimatedSprite" parent="."]
position = Vector2( 1.90735e-06, 0 )
scale = Vector2( 0.491667, 0.5 )
frames = SubResource( 1 )
animation = "house"

[node name="Area2D" type="Area2D" parent="."]
z_index = 5
priority = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="Building_Info_Parent" type="Node2D" parent="."]
visible = false
position = Vector2( -10, -169 )
scale = Vector2( 3.17788, 3.61762 )

[node name="ColorRect" type="ColorRect" parent="Building_Info_Parent"]
margin_left = -53.0
margin_top = -22.0
margin_right = 63.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit-infoMenu" type="Sprite" parent="Building_Info_Parent"]
position = Vector2( 5, 7 )
texture = ExtResource( 3 )

[node name="Building_name" type="RichTextLabel" parent="Building_Info_Parent"]
margin_left = -52.0
margin_top = -20.0
margin_right = 1611.0
margin_bottom = 181.0
rect_scale = Vector2( 0.0685389, 0.0720938 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center] house [/center]"
text = " house "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building_discription" type="RichTextLabel" parent="Building_Info_Parent"]
margin_left = -52.0
margin_top = -6.0
margin_right = 2744.0
margin_bottom = 251.0
rect_scale = Vector2( 0.0407784, 0.0467499 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center] contains people [/center]"
text = " contains people "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="food_cost" type="RichTextLabel" parent="Building_Info_Parent"]
margin_left = -31.0
margin_top = 14.0
margin_right = 386.0
margin_bottom = 166.0
rect_scale = Vector2( 0.0407784, 0.0467499 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "20"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gold_cost" type="RichTextLabel" parent="Building_Info_Parent"]
margin_left = 9.99999
margin_top = 15.0
margin_right = 427.0
margin_bottom = 167.0
rect_scale = Vector2( 0.0407784, 0.0467499 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "20"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wood_cost" type="RichTextLabel" parent="Building_Info_Parent"]
margin_left = 45.0
margin_top = 15.0
margin_right = 462.0
margin_bottom = 167.0
rect_scale = Vector2( 0.0407784, 0.0467499 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "20"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wood" type="Sprite" parent="Building_Info_Parent"]
position = Vector2( 38, 18 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )

[node name="Food" type="Sprite" parent="Building_Info_Parent"]
position = Vector2( -38, 18 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 5 )

[node name="Money" type="Sprite" parent="Building_Info_Parent"]
position = Vector2( 1, 19 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
